fix: refreshing tree upon config change or kubeconfig removal (#595) (#610)
* fix: refreshing tree upon config change or kubeconfig removal (#595)

Signed-off-by: Andre Dietisheim <adietish@redhat.com>

* display default-/first namespace if current doesnt exist

Signed-off-by: Andre Dietisheim <adietish@redhat.com>

* correct type of parent to CreateComponentLinkNode

Signed-off-by: Andre Dietisheim <adietish@redhat.com>

* fix: dont 'fatal IDE error' when cluster is not reachable (#621)

Signed-off-by: Andre Dietisheim <adietish@redhat.com>

---------

Signed-off-by: Andre Dietisheim <adietish@redhat.com>