@@ -14,11 +14,13 @@ import com.intellij.ide.projectView.PresentationData;
 import com.intellij.ide.util.treeView.AbstractTreeStructure;
 import com.intellij.ide.util.treeView.NodeDescriptor;
 import com.intellij.openapi.project.Project;
+import com.intellij.ui.tree.LeafState;
 import com.redhat.devtools.intellij.common.tree.LabelAndIconDescriptor;
 import com.redhat.devtools.intellij.common.tree.MutableModel;
 import com.redhat.devtools.intellij.common.tree.MutableModelSupport;
 import io.fabric8.kubernetes.client.KubernetesClientException;
 import org.jboss.tools.intellij.openshift.Constants;
+import org.jboss.tools.intellij.openshift.utils.ExceptionUtils;
 import org.jboss.tools.intellij.openshift.utils.helm.Helm;
 import org.jboss.tools.intellij.openshift.utils.odo.Odo;
 import org.jetbrains.annotations.NotNull;
@@ -67,29 +69,49 @@ public class ApplicationsTreeStructure extends AbstractTreeStructure implements 
     @NotNull
     @Override
     public Object @NotNull [] getChildElements(@NotNull Object element) {
-        if (element == this) {
-            return new Object[]{getApplicationsRoot(), registries};
-        }
-        if (element instanceof ApplicationsRootNode) {
-            return getNamespaces((ApplicationsRootNode) element);
-        } else if (element instanceof NamespaceNode) {
-            return createNamespaceChildren((NamespaceNode) element);
-        } else if (element instanceof ComponentNode) {
-            return createComponentChildren((ComponentNode) element);
-        } else if (element instanceof DevfileRegistriesNode) {
-            return getRegistries(root);
-        } else if (element instanceof DevfileRegistryNode) {
-            return getRegistryComponentTypes((DevfileRegistryNode) element);
-        } else if (element instanceof DevfileRegistryComponentTypeNode) {
-            return getRegistryComponentTypeStarters((DevfileRegistryComponentTypeNode) element);
+        try {
+            if (element == this) {
+                return new Object[]{root, registries};
+            } else if (element instanceof ApplicationsRootNode) {
+                return getCurrentNamespace((ApplicationsRootNode) element);
+            } else if (element instanceof NamespaceNode) {
+                return createNamespaceChildren((NamespaceNode) element);
+            } else if (element instanceof ComponentNode) {
+                return createComponentChildren((ComponentNode) element);
+            } else if (element instanceof DevfileRegistriesNode) {
+                return getRegistries(root);
+            } else if (element instanceof DevfileRegistryNode) {
+                return getRegistryComponentTypes((DevfileRegistryNode) element);
+            } else if (element instanceof DevfileRegistryComponentTypeNode) {
+                return getRegistryComponentTypeStarters((DevfileRegistryComponentTypeNode) element);
+            }
+        } catch (Exception e) {
+            return new Object[]{new MessageNode<>(root, root, ExceptionUtils.getMessage(e))};
         }
         return new Object[0];
     }
 
+    @Override
+    public @NotNull LeafState getLeafState(@NotNull Object element) {
+        if (element instanceof ComponentNode) {
+            return LeafState.ALWAYS;
+        } else if (element instanceof ChartReleaseNode) {
+            return LeafState.ALWAYS;
+        } else if (element instanceof MessageNode<?>) {
+            return LeafState.ALWAYS;
+        } else {
+            return LeafState.ASYNC;
+        }
+    }
+
     @NotNull
-    private Object[] createComponentChildren(ComponentNode element) {
-        List<URLNode> urls = getURLs(element);
-        List<BindingNode> bindings = getBindings(element);
+    private Object[] createComponentChildren(ComponentNode componentNode) {
+        Odo odo = root.getOdo().getNow(null);
+        if (odo == null) {
+            return new Object[] { new MessageNode<>(root, componentNode, "Could not get components") };
+        }
+        List<URLNode> urls = getURLs(componentNode);
+        List<BindingNode> bindings = getBindings(componentNode, odo);
         return Stream.of(urls, bindings)
           .filter(item -> !item.isEmpty())
           .flatMap(Collection::stream)
@@ -100,91 +122,93 @@ public class ApplicationsTreeStructure extends AbstractTreeStructure implements 
     private Object[] createNamespaceChildren(@NotNull NamespaceNode namespaceNode) {
         List<Object> nodes = new ArrayList<>();
 
-        Odo odo = namespaceNode.getRoot().getOdo().getNow(null);
-        nodes.addAll(getComponents(namespaceNode, odo));
-        nodes.addAll(getServices(namespaceNode, odo));
+        nodes.addAll(getComponents(namespaceNode));
+        nodes.addAll(getServices(namespaceNode));
 
-        Helm helm = namespaceNode.getRoot().getHelm(true).getNow(null);
-        nodes.addAll(getHelmReleases(namespaceNode, helm));
+        nodes.addAll(getHelmReleases(namespaceNode));
 
         return nodes.toArray();
     }
 
-    private Object[] getNamespaces(ApplicationsRootNode element) {
+    private Object[] getCurrentNamespace(ApplicationsRootNode element) {
         List<Object> namespaces = new ArrayList<>();
         try {
-            Odo odo = element.getOdo().getNow(null);
+            Odo odo = root.getOdo().getNow(null);
             if (odo == null) {
-                return new Object[]{};
+                return new Object[] { new MessageNode<>(element, element, "Could not get current namespace") };
             }
-            String ns = odo.getNamespace();
+            String ns = odo.getCurrentNamespace();
             if (ns != null) {
-                namespaces.add(new NamespaceNode(element, odo.getNamespace()));
+                namespaces.add(new NamespaceNode(element, ns));
             } else {
                 namespaces.add(new CreateNamespaceLinkNode(element));
             }
             element.setLogged(true);
         } catch (Exception e) {
-            if (e instanceof KubernetesClientException) {
-                KubernetesClientException kce = (KubernetesClientException) e;
-                if (kce.getCode() == 401) {
-                    namespaces.add(new MessageNode<>(element, element, LOGIN));
-                } else if (kce.getCause() instanceof NoRouteToHostException) {
-                    namespaces.add(new MessageNode<>(element, element, kce.getCause().getMessage()));
-                } else if (kce.getCause().getMessage().contains(Constants.DEFAULT_KUBE_URL)) {
-                    namespaces.add(new MessageNode<>(element, element, LOGIN));
-                } else {
-                    namespaces.add(new MessageNode<>(element, element, "Unable to get namespaces: " + e.getMessage()));
-                }
-            } else {
-                namespaces.add(new MessageNode<>(element, element, "Unable to get namespaces: " + e.getMessage()));
-            }
+            namespaces.add(createErrorNode(element, e));
             element.setLogged(false);
         }
         return namespaces.toArray();
     }
 
-    private List<ParentableNode<?>> getComponents(NamespaceNode element, Odo odo) {
-        if (odo == null) {
-            return Collections.emptyList();
+    private MessageNode<?> createErrorNode(ParentableNode<?> parent, Exception e) {
+        if (e instanceof KubernetesClientException) {
+            KubernetesClientException kce = (KubernetesClientException) e;
+            if (kce.getCode() == 401) {
+                return new MessageNode<>(root, parent, LOGIN);
+            } else if (kce.getCause() instanceof NoRouteToHostException) {
+                return new MessageNode<>(root, parent, kce.getCause().getMessage());
+            } else if (kce.getCause().getMessage().contains(Constants.DEFAULT_KUBE_URL)) {
+                return new MessageNode<>(root, parent, LOGIN);
+            }
         }
-        List<ParentableNode<?>> components = new ArrayList<>();
+        return new MessageNode<>(root, parent, "Could not get namespaces: " + ExceptionUtils.getMessage(e));
+    }
+
+    private List<BaseNode<?>> getComponents(NamespaceNode namespaceNode) {
+        Odo odo = root.getOdo().getNow(null);
+        if (odo == null) {
+            return List.of(new MessageNode<>(root, namespaceNode, "Could not get components"));
+        }
+        List<BaseNode<?>> components = new ArrayList<>();
         components.addAll(load(
-          () -> odo.getComponents(element.getName()).stream()
+          () -> odo.getComponents(namespaceNode.getName()).stream()
             .filter(component -> !component.isManagedByHelm()) // dont display helm components
-            .map(component -> new ComponentNode(element, component))
+            .map(component -> new ComponentNode(namespaceNode, component))
             .collect(Collectors.toList()),
-          element,
-          "Failed to load components"));
+          namespaceNode,
+          "Could not get components"));
         if (components.isEmpty()) {
-            components.add(new CreateComponentLinkNode(element.getRoot(), element));
+            components.add(new CreateComponentLinkNode(namespaceNode.getRoot(), namespaceNode));
         }
         return components;
     }
 
-    private List<ParentableNode<?>> getServices(NamespaceNode element, Odo odo) {
+    private List<BaseNode<?>> getServices(NamespaceNode namespaceNode) {
+        Odo odo = root.getOdo().getNow(null);
         if (odo == null) {
-            return Collections.emptyList();
+            return List.of(new MessageNode<>(root, namespaceNode, "Could not get application services"));
         }
-        return load(() -> odo.getServices(element.getName()).stream()
-            .map(si -> new ServiceNode(element, si))
+        return load(() -> odo.getServices(namespaceNode.getName()).stream()
+            .map(si -> new ServiceNode(namespaceNode, si))
             .collect(Collectors.toList()),
-          element,
-          "Failed to load application services");
+          namespaceNode,
+          "Could not get application services");
     }
 
-    private List<ParentableNode<?>> getHelmReleases(NamespaceNode element, Helm helm) {
+    private List<BaseNode<?>> getHelmReleases(NamespaceNode namespaceNode) {
+        Helm helm = namespaceNode.getRoot().getHelm(true).getNow(null);
         if (helm == null) {
-            return Collections.emptyList();
+            return List.of(new MessageNode<>(root, namespaceNode, "Could not get chart releases"));
         }
         return load(() -> helm.list().stream()
-            .map(release -> new ChartReleaseNode(element, release))
+            .map(release -> new ChartReleaseNode(namespaceNode, release))
             .collect(Collectors.toList()),
-          element,
-          "Failed to load chart releases");
+          namespaceNode,
+          "Could not get chart releases");
     }
 
-    private List<ParentableNode<?>> load(Callable<List<ParentableNode<?>>> callable, NamespaceNode namespace, String errorMessage) {
+    private List<BaseNode<?>> load(Callable<List<BaseNode<?>>> callable, NamespaceNode namespace, String errorMessage) {
         try {
             return callable.call();
         } catch (Exception e) {
@@ -209,12 +233,8 @@ public class ApplicationsTreeStructure extends AbstractTreeStructure implements 
         return results;
     }
 
-    private List<BindingNode> getBindings(ComponentNode element) {
+    private List<BindingNode> getBindings(ComponentNode element, @NotNull Odo odo) {
         List<BindingNode> results = new ArrayList<>();
-        Odo odo = element.getRoot().getOdo().getNow(null);
-        if (odo == null) {
-            return Collections.emptyList();
-        }
         try {
             odo.listBindings(element.getParent().getName(),
                 element.getComponent().getPath(), element.getName()).forEach(binding ->
@@ -227,45 +247,46 @@ public class ApplicationsTreeStructure extends AbstractTreeStructure implements 
     }
 
     private Object[] getRegistries(ApplicationsRootNode root) {
-        List<DevfileRegistryNode> result = new ArrayList<>();
         Odo odo = root.getOdo().getNow(null);
-        if (odo != null) {
-            try {
-                odo.listDevfileRegistries().forEach(registry ->
-                  result.add(new DevfileRegistryNode(root, registries, registry))
-                );
-            } catch (IOException e) {
-                LOGGER.warn(e.getLocalizedMessage(), e);
-            }
+        if (odo == null) {
+            return new Object[] { new MessageNode<>(root, root, "Could not get registries") };
+        }
+        List<DevfileRegistryNode> result = new ArrayList<>();
+        try {
+            odo.listDevfileRegistries().forEach(registry ->
+              result.add(new DevfileRegistryNode(root, registries, registry))
+            );
+        } catch (IOException e) {
+            LOGGER.warn(e.getLocalizedMessage(), e);
         }
         return result.toArray();
     }
 
-    private Object[] getRegistryComponentTypes(DevfileRegistryNode element) {
-        List<DevfileRegistryComponentTypeNode> result = new ArrayList<>();
-        Odo odo = element.getRoot().getOdo().getNow(null);
+    private Object[] getRegistryComponentTypes(DevfileRegistryNode registryNode) {
+        Odo odo = root.getOdo().getNow(null);
         if (odo == null) {
-            return new Object[]{};
+            return new Object[] { new MessageNode<>(root, registryNode, "Could not get registry component types") };
         }
+        List<DevfileRegistryComponentTypeNode> result = new ArrayList<>();
         try {
-            odo.getComponentTypes(element.getName()).forEach(type ->
-              result.add(new DevfileRegistryComponentTypeNode(root, element, type)));
+            odo.getComponentTypes(registryNode.getName()).forEach(type ->
+              result.add(new DevfileRegistryComponentTypeNode(root, registryNode, type)));
         } catch (IOException e) {
             LOGGER.error(e.getLocalizedMessage(), e);
         }
         return result.toArray();
     }
 
-    private Object[] getRegistryComponentTypeStarters(DevfileRegistryComponentTypeNode element) {
-        List<DevfileRegistryComponentTypeStarterNode> result = new ArrayList<>();
-        Odo odo = element.getRoot().getOdo().getNow(null);
+    private Object[] getRegistryComponentTypeStarters(DevfileRegistryComponentTypeNode componentTypeNode) {
+        Odo odo = root.getOdo().getNow(null);
         if (odo == null) {
-            return new Object[]{};
+            return new Object[] { new MessageNode<>(root, componentTypeNode, "Could not get registry component starters") };
         }
+        List<DevfileRegistryComponentTypeStarterNode> result = new ArrayList<>();
         try {
-            odo.getComponentTypeInfo(element.getName(),
-              element.getComponentType().getDevfileRegistry().getName()).getStarters().forEach(starter ->
-              result.add(new DevfileRegistryComponentTypeStarterNode(element.getRoot(), element, starter)));
+            odo.getComponentTypeInfo(componentTypeNode.getName(),
+              componentTypeNode.getComponentType().getDevfileRegistry().getName()).getStarters().forEach(starter ->
+              result.add(new DevfileRegistryComponentTypeStarterNode(componentTypeNode.getRoot(), componentTypeNode, starter)));
         } catch (IOException e) {
             LOGGER.error(e.getLocalizedMessage(), e);
         }
@@ -274,11 +295,11 @@ public class ApplicationsTreeStructure extends AbstractTreeStructure implements 
 
     @Override
     public Object getParentElement(@NotNull Object element) {
-        if (element instanceof ParentableNode) {
-            return ((ParentableNode<?>) element).getParent();
-        }
         if (element instanceof ApplicationsRootNode) {
             return this;
+        }
+        if (element instanceof ParentableNode) {
+            return ((ParentableNode<?>) element).getParent();
         }
         return null;
     }
@@ -330,34 +351,34 @@ public class ApplicationsTreeStructure extends AbstractTreeStructure implements 
 
         @Override
         protected void update(@NotNull PresentationData presentation) {
-            super.update(presentation);
             if (isProcessing()) {
                 String processingLabel = getProcessingMessage();
                 if (processingLabel != null) {
                     presentation.setLocationString(processingLabel);
                 }
             }
+            super.update(presentation);
         }
 
         private String getProcessingMessage() {
-            ParentableNode<T> modelNode = getParentableNode();
-            if (modelNode != null) {
-                return modelNode.getProcessingMessage();
+            ProcessingNode node = getProcessingNode();
+            if (node != null) {
+                return node.getMessage();
             } else {
                 return null;
             }
         }
 
         private boolean isProcessing() {
-            ParentableNode<?> node = getParentableNode();
+            ProcessingNode node = getProcessingNode();
             return node != null
                 && node.isProcessing();
         }
 
-        private ParentableNode<T> getParentableNode() {
+        private ProcessingNode getProcessingNode() {
             Object element = getElement();
-            if (element instanceof ParentableNode) {
-                return (ParentableNode<T>) element;
+            if (element instanceof ProcessingNode) {
+                return (ProcessingNode) element;
             } else {
                 return null;
             }
